	new file:   ZGame/3dsMax/lib3ds_2_0/examples/3dsplay/tga.c
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/3dsplay/tga.h
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/CMakeLists.txt
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/Makefile.am
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/cube/CMakeLists.txt
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/cube/Makefile.am
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/cube/cube.c
	new file:   ZGame/3dsMax/lib3ds_2_0/examples/cube/cube.tga
	new file:   ZGame/3dsMax/lib3ds_2_0/lib3ds-config.in
	new file:   ZGame/3dsMax/lib3ds_2_0/lib3ds.m4
	new file:   ZGame/3dsMax/lib3ds_2_0/src/CMakeLists.txt
	new file:   ZGame/3dsMax/lib3ds_2_0/src/Makefile.am
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds.h
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds.rc
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_atmosphere.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_background.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_camera.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_chunk.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_chunktable.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_file.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_impl.h
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_io.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_light.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_material.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_math.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_matrix.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_mesh.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_node.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_quat.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_shadow.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_track.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_util.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_vector.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_viewport.c
