@@ -59,7 +59,7 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-22 17:23:47 L.223'23773 T1570279927.K ~268 +----+----+----+----+----+
+     Zndex_E : //z 2015-05-26 16:59:29 L.219'25231 T553790787 .K ~272 +----+----+----+----+----+
      TimeCnt : //z 2015-05-22 17:23:06 L.223'23814 T1570279794.K ~10  +----+----+----+----+----+
      Reg.Cnt : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15  +----+----+----+----+----+
      #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
@@ -78,7 +78,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-22 17:23:47 L.223'23773 T1570279927.K ~283   R+.15   L+.315  --+----+
+     Version : //z 2015-05-26 16:59:29 L.219'25231 T553790787 .K ~287   R+.14   L+.294  --+----+
+     #15  V+ : //z 2015-05-26 16:59:26 L.219'25234 T553790784 .K ~285   R+.14   L+.293  
      #14  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~273   R+.15   L+.296  V+.273  
      #14  V+ : //z 2015-05-21 18:07:22 L.224'21158 T2791718354.K ~266   R+.14   L+.280  
      #13  V+ : //z 2015-05-21 17:58:28 L.224'21692 T1506215933.K ~247   R+.14   L+.270  
@@ -289,6 +290,8 @@ http://www.martinreddy.net/gfx/3d/3DS.spec
 http://www.the-labs.com/Blender/3DS-details.html
 
 http://www.spacesimulator.net/tutorials/3ds_loader_tutorial.html
+
+2015-05-26 16:59 zitem haptix googlecode
 #endregion //z 2015-05-21 17:49:30 L.224'22230 BG57IV3@XCL T1505065974.K.F4146951713-+----+----+
 
 #region 05-22 17:22 R#.15   @CMakeFile
