@@ -999,3 +999,14 @@ Changes to be committed:
 	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_vector.c
 	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_viewport.c
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+haptix.2015/05/26.17_00_03.46.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
